Add dynamic div and audio functionality

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id='outer'>
       <div id='inner'>
         <h1>Did you push today?</h1>
-          <button class='button' type="button">Yes</button><button class='button' type="button">No</button>
+          <button class='button yes' type="button">Yes</button><button class='button no' type="button">No</button>
         <h1>Did you do something career related today?</h1>
-          <button class='button' type="button">Yes</button><button class='button' type="button">No</button>
+          <button class='button yes' type="button">Yes</button><button class='button no' type="button">No</button>
       </div>
     </div>
   </body>
