--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,9 @@
           <button class='button yes' type="button">Yes</button><button class='button no' type="button">No</button>
       </div>
     </div>
+    <audio id='trophies' controls>
+  <!-- <source src="horse.ogg" type="audio/ogg"> -->
+  <source src="https://s3-us-west-2.amazonaws.com/missingfursons/trophies.mp3" type="audio/mpeg">
+  </audio>
   </body>
 </html>
